<resources>
    <string name="app_name">Motion Cam</string>
    <string name="light">Light</string>
    <string name="shadows">Shadows</string>
    <string name="highlights">Highlights</string>
    <string name="contrast">Contrast</string>
    <string name="blacks">Blacks</string>
    <string name="exposure">Exposure</string>
    <string name="saturation">Saturation</string>
    <string name="white_balance">White Balance</string>
    <string name="temperature">Temperature</string>
    <string name="tint">Tint</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="color">Color</string>
    <string name="as_shot">As Shot</string>
    <string name="merge_images">Merge Images</string>
    <string name="additional_noise_reduction">Additional Noise Reduction</string>
    <string name="denoise">Noise Reduction</string>
    <string name="detail">Detail</string>
    <string name="sharpness">Sharpness</string>
    <string name="info">Information</string>
    <string name="shutter_speed">Shutter Speed:</string>
    <string name="iso">ISO:</string>
    <string name="manual_controls">Exposure</string>
    <string name="denoise_off">Off</string>
    <string name="denoise_normal">Normal</string>
    <string name="denoise_aggressive">High</string>
    <string name="title_activity_test">Test</string>
    <string name="history">History</string>
    <string name="memory_use_description">The maximum amount of memory to use when capturing images from the camera.</string>
    <string name="camera_preview_quality_description">The quality of the camera preview. Higher quality requires more GPU resources.</string>
    <string name="camera_profile">Camera Profile</string>
    <string name="camera_profile_description">The camera profile describes the default settings to use for captured images.</string>
    <string name="general">General</string>
    <string name="memory_usage">Memory Usage</string>
    <string name="camera_preview_quality">Camera Preview Quality</string>
    <string name="overall_saturation">Overall Saturation</string>
    <string name="greens">Greens</string>
    <string name="blues">Blues</string>
    <string name="jpeg_quality_description">JPEG quality to use when saving images.</string>
    <string name="jpeg_quality">JPEG Quality</string>
    <string name="temperature_offset">Temperature Offset</string>
    <string name="tint_offset">Tint Offset</string>
    <string name="alternative_ae">Alternative AE</string>
    <string name="enable_debug_mode">Enable debug mode</string>
    <string name="debug_mode">Debug mode</string>
    <string name="debug_mode_help">Turn this option on to leave unprocessed files on the filesystem</string>
    <string name="error">Error</string>
    <string name="not_supported_error">Your device does not support RAW capture.</string>
    <string name="capture_failed">There was an error trying to capture the image.</string>
    <string name="camera_error">The camera encountered an error.</string>
    <string name="ok">Ok</string>
    <string name="hdr">HDR</string>
    <string name="burst">Burst</string>
    <string name="dual_exposure">Dual Exposure Controls</string>
    <string name="dual_exposure_help">Enable an accurate preview of the camera output. This enables dual exposure control.</string>
    <string name="enable_dual_exposure">Enable dual exposure controls</string>
    <string name="hint_text">NEW! Enable dual exposure controls in the settings.</string>
    <string name="hdr_settings_description">The amount to underexpose. Higher values lead to better highlight recovery but may lead to unrealistic looking images.</string>
    <string name="capture_mode_description">Select RAW10 unless the camera does not behave correctly (e.g. issues with focus)</string>
    <string name="raw10">RAW10</string>
    <string name="raw16">RAW16</string>
    <string name="photo_mode">PHOTO</string>
    <string name="night_mode">NIGHT</string>
    <string name="burst_mode">BURST</string>
    <string name="processing">Processing</string>
    <string name="send_to">Send To</string>
    <string name="automatic_night_mode">Automatic night mode</string>
    <string name="enable_automatic_night_mode">Enable automatic night mode</string>
    <string name="automatically_switch_to_night_mode">Automatically switch to night mode</string>
    <string name="capture_mode">Capture Mode</string>
    <string name="value_percent">%1$d%%</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="adjustments">ADJUSTMENTS</string>
    <string name="raw">RAW</string>
    <string name="preview_contrast">CONTRAST</string>
    <string name="preview_colour">COLOUR</string>
    <string name="preview_tint">TINT</string>
    <string name="preview_warmth">WARMTH</string>
</resources>
