<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/previewControls"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/previewControlBtns"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/previewAdjustmentsBtn"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:textAppearance="@style/MotionCam.TextAppearance.Small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/adjustments"
            app:drawableTopCompat="@drawable/baseline_settings_brightness_white_24" />

        <TextView
            android:id="@+id/rawEnableBtn"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAppearance="@style/MotionCam.TextAppearance.Small"
            app:layout_constraintLeft_toRightOf="@id/previewAdjustmentsBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/raw"
            app:drawableTopCompat="@drawable/baseline_photo_white_24" />

        <TextView
            android:id="@+id/hdrEnableBtn"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAppearance="@style/MotionCam.TextAppearance.Small"
            app:layout_constraintLeft_toRightOf="@id/rawEnableBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/hdr"
            app:drawableTopCompat="@drawable/baseline_wb_sunny_white_24" />

        <ImageView
            android:id="@+id/settingsBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/round_settings_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/previewAdjustments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:visibility="gone"
        android:orientation="vertical">

        <View
            android:id="@+id/closePreviewAdjustmentsBtn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end"
            android:layout_margin="5dp"
            android:background="@drawable/baseline_cancel_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/contrastBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:background="@color/colorPrimaryDark"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textAppearance="@style/MotionCam.TextAppearance.Small"
                    android:text="@string/preview_contrast"/>

                <TextView
                    android:id="@+id/contrastValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textAppearance="@style/MotionCam.TextAppearance.Small"
                    android:text="50%"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/colourBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textAppearance="@style/MotionCam.TextAppearance.Small"
                    android:text="@string/preview_colour"/>

                <TextView
                    android:id="@+id/colourValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textAppearance="@style/MotionCam.TextAppearance.Small"
                    android:text="50%"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tintBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textAppearance="@style/MotionCam.TextAppearance.Small"
                    android:text="@string/preview_tint"/>

                <TextView
                    android:id="@+id/tintValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textAppearance="@style/MotionCam.TextAppearance.Small"
                    android:text="50%"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/warmthBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textAppearance="@style/MotionCam.TextAppearance.Small"
                    android:text="@string/preview_warmth"/>

                <TextView
                    android:id="@+id/warmthValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textAppearance="@style/MotionCam.TextAppearance.Small"
                    android:text="50%"/>
            </LinearLayout>

        </LinearLayout>

        <SeekBar
            android:id="@+id/previewSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="10"
            android:progressBackgroundTint="@color/white"
            android:thumbTint="@color/white"
            android:progressTint="@color/white"
            android:max="20"
            android:theme="@style/Widget.AppCompat.SeekBar.Discrete"
            android:padding="10dp"/>

    </LinearLayout>

</FrameLayout>

